[tool.poetry]
name = "SeaPlayer"
version = "0.5.0"
description = "SeaPlayer is a player that works in the terminal."
repository = "https://github.com/romanin-rf/SeaPlayer"
authors = ["Romanin <semina054@gmail.com>"]
keywords = ["tui", "player", "seaplayer", "wav", "mp3", "ogg", "midi"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{ include = "seaplayer" }]
include = [
    "seaplayer/modules/__init__.py",
    "seaplayer/modules/colorizer.py",
    "seaplayer/assets/image-not-found.png",
    "seaplayer/css/configurate.css",
    "seaplayer/css/objects.css",
    "seaplayer/css/seaplayer.css",
    "seaplayer/css/unknown.css"
]

[tool.poetry.scripts]
seaplayer = "seaplayer.__main__:run"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^9.5.0"
aiofiles = "^23.1.0"
rich = ">=13.3.5"
mutagen = "1.45.1"
textual = ">=0.25.0"
playsoundsimple-py = "0.7.0"
properties-py = "1.1.0"
typing-inspect = "^0.8.0"
ripix = ">=2.2.3"
platformdirs = "^3.5.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
