[tool.poetry]
name = "SeaPlayer"
version = "0.8.11"
description = "SeaPlayer is a player that works in the terminal."
homepage = "https://romanin-rf.github.io/SeaPlayer"
repository = "https://github.com/romanin-rf/SeaPlayer"
authors = ["Romanin <semina054@gmail.com>"]
keywords = ["textual", "tui", "seaplayer", "player", "wav", "mp3", "ogg", "flac", "midi"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]
packages = [{ include="seaplayer" }]
include = [
    "seaplayer/assets/image-not-found.png",
    "seaplayer/css/configurate.tcss",
    "seaplayer/css/objects.tcss",
    "seaplayer/css/seaplayer.tcss",
    "seaplayer/css/unknown.tcss",
    "seaplayer/langs/en-eng.properties",
    "seaplayer/langs/ru-rus.properties",
    "seaplayer/langs/uk-ukr.properties"
]
[tool.poetry.urls]
"Changelog" = "https://romanin-rf.github.io/SeaPlayer/changelog"

[tool.poetry.scripts]
seaplayer = "seaplayer.__main__:run"
seaplug = "seaplayer.plug.__main__:run"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# Custom modules
ripix = "2.5.0"
playsoundsimple-py = "0.8.4"
properties-py = "1.2.1"
urlopen2 = "1.4.0"
# Main Modules
pillow = ">=9.5"
aiofiles = ">=23.1"
rich = ">=13"
mutagen = ">=1.45"
textual = ">=0.43"
platformdirs = ">=3.5"
pydantic = ">=2.5"
click = ">=8"
validators = ">=0.20"
typing-inspect = ">=0.9"
typing-extensions = ">=4.6"
# Optional Modules
poetry = {version = ">=1.5", optional = true}
pyinstaller = {version = ">=5.11", optional = true}

[tool.poetry.extras]
build = [
    "poetry",
    "pyinstaller",
]
docs = [
    "rich",
    "mkdocs",
    "mkdocs-exclude",
    "mkdocs-autorefs",
    "mkdocs-rss-plugin",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings",
    "mkdocstrings-crystal",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-material-extensions",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
